presence-backend/k8s/ingress/basic-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-test
  namespace: presence
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fingerprint-service
            port:
              number: 3000
