presence-backend/k8s/ingress/catch-all.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catch-all-ingress
  namespace: presence
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fingerprint-service
                port:
                  number: 3000
          - path: /fingerprint
            pathType: Prefix
            backend:
              service:
                name: fingerprint-service
                port:
                  number: 3000
          - path: /echo
            pathType: Prefix
            backend:
              service:
                name: echo-server
                port:
                  number: 80
