presence-backend/k8s/ingress/simple-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
  namespace: presence
spec:
  rules:
  - host: talkstudio.space
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fingerprint-service
            port:
              number: 3000
